Crea componente header Estiliza componente header mode light Agrega imágenes al header

--- a/posts/anatomia-de-una-web.mdx
+++ b/posts/anatomia-de-una-web.mdx
@@ -3,6 +3,8 @@ title: 'Anatomía de una Web'
 date: '28 de Diciembre 2022'
 ---
 
+# Anatomía de una Web
+
 ## Parte I
 
 Contiene metadatos útiles para navegadores y buscadores, también realiza importaciones de hojas de estilo, tipografías u otros recursos.
