Configuración ESLint y Prettier

--- a/posts/anatomia-de-una-web.mdx
+++ b/posts/anatomia-de-una-web.mdx
@@ -18,8 +18,7 @@ Contiene metadatos útiles para navegadores y buscadores, también realiza impor
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Tienda online de tortas, ponquesitos
-y gelatinas para endulzar los momentos con tu familia."
+      content="Tienda online de tortas, ponquesitos y gelatinas para endulzar los momentos con tu familia."
     />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="./images/favicon.png" />
