Implementa componente para títulos

--- a/posts/selectores-css.mdx
+++ b/posts/selectores-css.mdx
@@ -3,6 +3,7 @@ title: 'Selectores CSS'
 date: '29 de Diciembre 2022'
 tag: 'css'
 description: 'Selectores CSS, Básicos'
+reading: '2'
 ---
 # Selectores CSS
 
