--- a/posts/anatomia-de-una-web.mdx
+++ b/posts/anatomia-de-una-web.mdx
@@ -3,11 +3,12 @@ title: 'Anatomía de una Web'
 date: '28 de Diciembre 2022'
 tag: 'html'
 description: 'Estructura de una web'
+reading: '2'
 ---
 
-# Anatomía de una Web
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque accusamus ratione at molestiae nam laboriosam cum neque maxime voluptatibus commodi dolores perferendis harum, laudantium ducimus aliquid ullam quasi saepe hic?
 
-## Parte I
+## Head
 
 Contiene metadatos útiles para navegadores y buscadores, también realiza importaciones de hojas de estilo, tipografías u otros recursos.
 
