feat: :sparkles: Agrega card author para autores invitados

--- a/posts/vision-board.mdx
+++ b/posts/vision-board.mdx
@@ -4,6 +4,11 @@ date: '21 de Febrero 2023'
 tag: 'planning'
 description: 'Vision Board es un tablero formado por fotos, dibujos y frases, que representan nuestras metas y deseos.'
 reading: '7'
+authorName: 'Name and Surname'
+authorPhoto: 'https://api.lorem.space/image/face?w=400&h=400'
+authorLink: 'https://github.com/achique-luisdan'
+authorRole: 'Professional Role'
+authorResume: 'Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo iste quisquam non at quia repudiandae eum optio harum nihil, repellat beatae ad vitae sapiente eligendi similique adipisci voluptatibus. Esse, earum! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque eveniet qui fuga labore assumenda magni tenetur aspernatur debitis, non facilis, culpa temporibus accusamus modi repudiandae quos aliquam. Tempora, dicta aliquam.'
 ---
 ![Ejemplo básico de vision board](https://tizanasoft.com/static/ART_VISION_BOARD.png)
 
