--- a/posts/javascript.mdx
+++ b/posts/javascript.mdx
@@ -3,4 +3,4 @@ title: 'Artículos sobre JavaScript'
 tag: 'is'
 ---
 
-JavaScript (JS) es un lenguaje de programación ligero, interpretado, o compilado justo-a-tiempo (just-in-time) con funciones de primera clase. Si bien es más conocido como un lenguaje de scripting (secuencias de comandos) para páginas web, y es usado en muchos entornos fuera del navegador.
+Aprenderás sobre los conceptos básicos de **JavaScript**, variables, constantes, funciones y estructuras de control. Además, encontrarás información sobre tópicos más comunes en día a día de un **Programador JavaScript**, como la programación orientada a objetos, la programación asincrónica y el trabajo con APIs.
