--- a/posts/selfcare.mdx
+++ b/posts/selfcare.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Autocuidado'
+title: 'Artículos sobre Autocuidado'
 tag: 'is'
 ---
 
-Cosas de Autocuidado
+En esta sección, encontrarás tips sobre **autocuidado** (o **selfcare** en inglés), fundamentales para resguardar la salud física, emocional y mental. Permitiendo prevenir enfermedades y enfrentar los desafíos de la vida de manera eficaz. Algunos de los tópicos que podrás consultar son: hábitos saludables, actividades de relajación, técnicas para reducir el estrés y la ansiedad, entre otros.
