--- a/posts/planning.mdx
+++ b/posts/planning.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Planificación'
+title: 'Artículos sobre Planificación'
 tag: 'is'
 ---
 
-Cosas de planificación
+En este espacio, podrás explorar consejos y herramientas para mejorar tu **productividad**. Aprenderás sobre técnicas de gestión del tiempo, organización, planificación y establecimiento de metas. Además, artículos sobre cómo mantener la motivación, evitar la procrastinación y mejorar tu concentración.
