Agrega meta descripción a temas para SEO

--- a/posts/css.mdx
+++ b/posts/css.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Artículos sobre CSS'
 tag: 'is'
+description: 'En esta sección, podrás consultar tips y técnicas para mejorar tus habilidades en CSS. Aprenderás sobre selectores, propiedades, diseño responsive, animaciones y mucho más. Descubre cómo crear diseños únicos y atractivos para tus proyectos web con CSS.'
 ---
 
 En esta sección, podrás consultar tips y técnicas para mejorar tus habilidades en **CSS**. Aprenderás sobre selectores, propiedades, diseño responsive, animaciones y mucho más. Descubre cómo crear diseños únicos y atractivos para tus proyectos web con **CSS**.
