--- a/posts/javascript.mdx
+++ b/posts/javascript.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Artículos sobre JavaScript'
 tag: 'is'
+description: 'Aprenderás sobre los conceptos básicos de JavaScript, variables, constantes, funciones y estructuras de control. Además, encontrarás información sobre tópicos más comunes en día a día de un Programador JavaScript, como la programación orientada a objetos, la programación asincrónica y el trabajo con APIs.'
 ---
 
 Aprenderás sobre los conceptos básicos de **JavaScript**, variables, constantes, funciones y estructuras de control. Además, encontrarás información sobre tópicos más comunes en día a día de un **Programador JavaScript**, como la programación orientada a objetos, la programación asincrónica y el trabajo con APIs.
