--- a/posts/html.mdx
+++ b/posts/html.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Artículos sobre HTML'
 tag: 'is'
+description: 'En este apartado, encontrarás información valiosa sobre HTML (Lenguaje de Marcas de Hipertexto, del inglés HyperText Markup Language) . Tendrás fragmentos de código y ejemplos prácticos de como aplicarlos en tus proyectos web. Aprenderás sobre etiquetas, atributos, estructura del documento, formularios y mucho más. ¡Mejora tus habilidades en HTML y construye páginas web atractivas y funcionales!'
 ---
 
 En este apartado, encontrarás información valiosa sobre **HTML** (Lenguaje de Marcas de Hipertexto, del inglés HyperText Markup Language) . Tendrás fragmentos de código y ejemplos prácticos de como aplicarlos en tus proyectos web. Aprenderás sobre etiquetas, atributos, estructura del documento, formularios y mucho más. ¡Mejora tus habilidades en **HTML** y construye páginas web atractivas y funcionales!
