Agrega descripción al artículo

--- a/posts/7-tips-para-dormir-toda-la-noche.mdx
+++ b/posts/7-tips-para-dormir-toda-la-noche.mdx
@@ -2,13 +2,11 @@
 title: 'Sueño saludable: 7 tips para dormir toda la noche'
 date: '10 de Marzo 2023'
 tag: 'selfcare'
-description: 'Example'
+description: 'Tener un sueño saludable puede ser un auténtico desafío. Especialmente, cuando nuestro código tiene errores o estamos a un día para presentar nuestro proyecto. A todos nos puede pasar, por esa razón, no puedes perderte estos 7 consejos para recuperar el sueño por las noches.'
 reading: '10'
 ---
 
 ![Lugar de descanso](https://images.pexels.com/photos/10079452/pexels-photo-10079452.jpeg?cs=srgb&dl=pexels-mo-eid-10079452.jpg&fm=jpg&w=320&h=400)
-
-
 
 Tener un **sueño saludable** puede ser un auténtico desafío. Especialmente, cuando nuestro código tiene errores o estamos a un día para presentar nuestro proyecto. A todos nos puede pasar, por esa razón, no puedes perderte estos 7 consejos para recuperar el sueño por las noches.
 
