fix: :bug: Corrige contador de artículos por temas
Cuenta en la lista de todos los artículos

--- a/posts/7-tips-para-dormir-toda-la-noche.mdx
+++ b/posts/7-tips-para-dormir-toda-la-noche.mdx
@@ -43,7 +43,7 @@ La mente debe despejarse de la carga mental de un largo día, por ello es recome
 
 Así podrá conciliar el sueño rápidamente y descansar plenamente durante la noche.
 
-## 5. Hacer ejercicio o practicar algún deporte#
+## 5. Hacer ejercicio o practicar algún deporte
 
 Es importante resaltar que debe ser, por lo menos, tres horas antes de acostarse a dormir. De esta forma, el cuerpo se agotará y podrá dormir de una forma más plena.
 
