feat: :sparkles: Ordena últimos artículos por fecha de publicación

--- a/posts/3-practicas-de-autoconfianza.mdx
+++ b/posts/3-practicas-de-autoconfianza.mdx
@@ -1,6 +1,6 @@
 ---
 title: '3 Prácticas de Autoconfianza'
-date: '21 de Febrero 2023'
+date: '2023-02-21'
 tag: 'selfcare'
 description: 'Example'
 reading: '5'
