--- a/posts/anatomia-de-una-web.mdx
+++ b/posts/anatomia-de-una-web.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Anatomía de una Web'
-date: '28 de Diciembre 2022'
+date: '2022-12-28'
 tag: 'html'
 description: 'La anatomía básica de una página web es la estructura esencial que la conforma: head y body (cabeza y cuerpo). Las etiquetas son las encargas de definir la estructura.'
 reading: '5'
