--- a/posts/flexbox-css.mdx
+++ b/posts/flexbox-css.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Flexbox CSS'
-date: '04 de Octubre 2022'
+date: '2022-10-04'
 tag: 'css'
 description: 'Flexbox CSS, sirve para distribuir espacios y posicionar los elementos de nuestra página.'
 reading: '12'
