--- a/posts/selectores-css.mdx
+++ b/posts/selectores-css.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Selectores CSS'
-date: '29 de Diciembre 2022'
+date: '2022-10-01'
 tag: 'css'
 description: 'Selectores CSS, Básicos'
 reading: '10'
