--- a/posts/vision-board.mdx
+++ b/posts/vision-board.mdx
@@ -1,6 +1,6 @@
 ---
 title: '¿Cómo se hace un Vision Board?'
-date: '21 de Febrero 2023'
+date: '2023-02-21'
 tag: 'planning'
 description: 'Vision Board es un tablero formado por fotos, dibujos y frases, que representan nuestras metas y deseos.'
 reading: '7'
