--- a/posts/7-tips-para-dormir-toda-la-noche.mdx
+++ b/posts/7-tips-para-dormir-toda-la-noche.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Sueño saludable: 7 tips para dormir toda la noche'
-date: '10 de Marzo 2023'
+date: '2023-03-10'
 tag: 'selfcare'
 description: 'Tener un sueño saludable puede ser un auténtico desafío. Especialmente, cuando nuestro código tiene errores o estamos a un día para presentar nuestro proyecto. A todos nos puede pasar, por esa razón, no puedes perderte estos 7 consejos para recuperar el sueño por las noches.'
 reading: '10'
