refactor: Cambia tiempo de lectura  a 3 minutos  y mejora descripción artículo Orígenes de SQL

--- a/posts/origenes-de-sql.mdx
+++ b/posts/origenes-de-sql.mdx
@@ -2,8 +2,8 @@
 title: 'Orígenes de SQL'
 date: '2023-08-5'
 tag: 'sql'
-description: 'Example'
-reading: '5'
+description: 'Mapa Conceptual sobre los orígenes, fundamentos y tres conceptos importantes de SQL'
+reading: '3'
 ---
 
 SQL es el lenguaje de base de datos más popular del mundo.
