docs: :memo: Amplia los tres conceptos importantes en el artículo Orígenes de SQL

--- a/posts/origenes-de-sql.mdx
+++ b/posts/origenes-de-sql.mdx
@@ -13,3 +13,25 @@ Dominar SQL es una habilidad esencial para cualquier persona que trabaje con dat
 No puedo esperar para compartir contigo acerca de los orígenes, fundamentos y **tres conceptos importantes** para iniciar en SQL.
 
 ![Mapa Conceptual: Orígenes de SQL](https://tizanasoft.com/static/01_ORIGENES_DE_SQL.png)
+
+## Conceptos importantes
+
+Las bases de datos relacionales guardan su datos en tablas, conformadas por filas y columnas. Para relacionar los datos usan columnas en común, conocidas como claves primarías y claves foráneas.
+
+Me alegra compartir contigo estos tres conceptos, que estoy seguro que te serán de mucha utilidad:
+
+### 1) Tablas
+
+Una tabla tienes columnas y filas. Cada columna guarda un atributo o campo de la tabla. Cada fila de la tabla sería un registro o tupla.
+
+### 2) Claves primarías
+
+Es una columna, campo o atributo que identifica de manera única los registros de una tabla. Por ejemplo, el número de cédula de un empleado o el número de la placa de un vehículo. La clave primaria asegura que no existan valores duplicados en esa columna.
+
+### 3) Claves foráneas
+
+Es una columna que hace referencia a la columna de clave primaria de otra tabla. Para relacionar los datos entre sí.
+
+En este sentido, se podría decir que para determinar a que empleado pertenece cada vehículo, la tabla vehículo tendrá como clave foránea el número de cédula del empleado.
+
+![Ejemplo de Tablas y Claves: Orígenes de SQL](https://tizanasoft.com/static/TABLAS_Y_CLAVES.png)
