refactor: :recycle: Edita una palabra que no lleva acento

--- a/posts/origenes-de-sql.mdx
+++ b/posts/origenes-de-sql.mdx
@@ -16,7 +16,7 @@ No puedo esperar para compartir contigo acerca de los orígenes, fundamentos y *
 
 ## Conceptos importantes
 
-Las bases de datos relacionales guardan su datos en tablas, conformadas por filas y columnas. Para relacionar los datos usan columnas en común, conocidas como claves primarías y claves foráneas.
+Las bases de datos relacionales guardan su datos en tablas, conformadas por filas y columnas. Para relacionar los datos usan columnas en común, conocidas como claves primarias y claves foráneas.
 
 Me alegra compartir contigo estos tres conceptos, que estoy seguro que te serán de mucha utilidad:
 
@@ -24,7 +24,7 @@ Me alegra compartir contigo estos tres conceptos, que estoy seguro que te serán
 
 Una tabla tienes columnas y filas. Cada columna guarda un atributo o campo de la tabla. Cada fila de la tabla sería un registro o tupla.
 
-### 2) Claves primarías
+### 2) Claves primarias
 
 Es una columna, campo o atributo que identifica de manera única los registros de una tabla. Por ejemplo, el número de cédula de un empleado o el número de la placa de un vehículo. La clave primaria asegura que no existan valores duplicados en esa columna.
 
