refactor: :recycle: Omite palabra número de placa, pero la placa es alfanumérica

--- a/posts/origenes-de-sql.mdx
+++ b/posts/origenes-de-sql.mdx
@@ -26,7 +26,7 @@ Una tabla tienes columnas y filas. Cada columna guarda un atributo o campo de la
 
 ### 2) Claves primarias
 
-Es una columna, campo o atributo que identifica de manera única los registros de una tabla. Por ejemplo, el número de cédula de un empleado o el número de la placa de un vehículo. La clave primaria asegura que no existan valores duplicados en esa columna.
+Es una columna, campo o atributo que identifica de manera única los registros de una tabla. Por ejemplo, el número de cédula de un empleado o la placa de un vehículo. La clave primaria asegura que no existan valores duplicados en esa columna.
 
 ### 3) Claves foráneas
 
