feat: :sparkles: Sube link del tacker de 21 días de sueño saludable

--- a/posts/7-tips-para-dormir-toda-la-noche.mdx
+++ b/posts/7-tips-para-dormir-toda-la-noche.mdx
@@ -60,6 +60,10 @@ El lugar donde dormimos también requiere de nuestra atención, si de verdad que
 Ahora que ya conoces todos estos consejos para dormir mejor por la noche, solo queda aplicarlos en tu rutina diaria.
 Entendemos que empezar puede ser complicado, pero te aconsejamos incorporar un recurso que hemos diseñado especialmente para ti, se trata de un tracker de hábito donde podrás registrar y darle un seguimiento al sueño durante 21 días.
 
+🔗 [Descargar aquí](https://docs.google.com/spreadsheets/d/1HKKiJE5UIYzQkTIzfHxcC36g2bwp-nwvRLPgvVLw4-c/edit?usp=sharing)
+
+Puedes utilizar esta hoja de cálculo para registrar tu hora de acostarte, hora de despertaste, calidad del sueño y cualquier nota que consideres relevante. Después de 21 días, puedes revisar tus datos para ver cómo ha cambiado tu sueño. Este tracker de hábitos puede ayudarte a identificar cualquier patrón en tu sueño y a hacer los ajustes necesarios para mejorar tu calidad de sueño.
+
 ## Referencias
 
 [National Institute of Aging. (s.f.). Cómo dormir bien por la noche. https://www.nia.nih.gov/espanol/infografia/como-dormir-bien-noche](https://www.nia.nih.gov/espanol/infografia/como-dormir-bien-noche)
