refactor: :recycle: Ajusta descripción del Agrupa y ordena en SQL

--- a/posts/agrupa-y-ordena-en-sql.mdx
+++ b/posts/agrupa-y-ordena-en-sql.mdx
@@ -2,7 +2,7 @@
 title: 'Agrupa y ordena en SQL'
 date: '2023-08-9'
 tag: 'sql'
-description: 'Aprende consultas SQL, ve un esquema con los conceptos y comandos básicos.'
+description: 'Explora y práctica los tres comandos primordiales utilizados para agrupar, filtrar y ordenar en SQL.'
 reading: '10'
 ---
 
