feat: :sparkles: Agrega trivia de repaso y práctica Orígenes de SQL

--- a/posts/origenes-de-sql.mdx
+++ b/posts/origenes-de-sql.mdx
@@ -35,3 +35,9 @@ Es una columna que hace referencia a la columna de clave primaria de otra tabla.
 En este sentido, se podría decir que para determinar a que empleado pertenece cada vehículo, la tabla vehículo tendrá como clave foránea el número de cédula del empleado.
 
 ![Ejemplo de Tablas y Claves: Orígenes de SQL](https://tizanasoft.com/static/TABLAS_Y_CLAVES.png)
+
+## Trivia
+
+Realiza la trivia interactiva para repasar sobre orígenes, fundamentos y tres conceptos importantes para iniciar en SQL.
+
+🔗 [Trivia aquí](https://forms.gle/bcMx8NPhAxMsTjCX9)
