refactor: :recycle: Oculta section projects, para dejarlo para otra page, de forma que el home pueda cargar más rápido

--- a/posts/origenes-de-sql.mdx
+++ b/posts/origenes-de-sql.mdx
@@ -40,4 +40,4 @@ En este sentido, se podría decir que para determinar a que empleado pertenece c
 
 Realiza la trivia interactiva para repasar sobre orígenes, fundamentos y tres conceptos importantes para iniciar en SQL.
 
-🔗 [Trivia aquí](https://forms.gle/bcMx8NPhAxMsTjCX9)
+🔗 [Trivia aquí](https://forms.gle/VoNSQj7Qq2gPbwFB7)
