feat: :sparkles: Sube trivia del tema 2 tablas y relaciones

--- a/posts/tablas-y-relaciones-en-sql.mdx
+++ b/posts/tablas-y-relaciones-en-sql.mdx
@@ -65,3 +65,9 @@ CREATE TABLE cars (
 );
 
 ```
+
+## Trivia
+
+Realiza la trivia interactiva para repasar sobre los comandos básicos para crear y relacionar tablas en SQL.
+
+🔗 [Trivia aquí](https://forms.gle/sN8XngJvbCGyZuP8A)
