feat: :sparkles: Sube trivia 03 Consulta SQL

--- a/posts/consultas-sql.mdx
+++ b/posts/consultas-sql.mdx
@@ -211,3 +211,9 @@ AND e.role LIKE 'Diseñadora%';
 ```
 
 Se pueden colocar comodines antes, después o en medio de un texto.
+
+## Trivia
+
+Realiza la trivia interactiva para repasar las consultas SQL.
+
+🔗 [Trivia aquí](https://forms.gle/DAuWdyJWQbJxTGvL6)
