refactor: :recycle: Agrega enlaces a lecturas sugeridas para profundizar

--- a/posts/analisis-de-ventas-con-sql.mdx
+++ b/posts/analisis-de-ventas-con-sql.mdx
@@ -69,6 +69,10 @@ Por ejemplo, los valores de la columna destino vemos que se vuelven a escribir m
 
 Se podría crear una tabla destinos y otra tabla boletos, y relacionarlas para evitar esta redundancia.
 
+Si tienes alguna duda de cómo crear tablas y relaciones en SQL, tenemos un artículo dedicado al tema.
+
+🔗 [Tablas y relaciones en SQL](https://achique-luisdan.com/tablas-y-relaciones-en-sql)
+
 La tabla destinos va tener las columnas: id (que será un identificador único para cada destino) y la columna nombre.
 
 ```sql
@@ -170,6 +174,12 @@ ORDER BY
 ```
 
 Lo tenemos casi listo.
+
+Si deseas profundizar en cómo hacer consultas SQL tenemos varios artículos para tí:
+
+🔗 [Consultas SQL](https://achique-luisdan.com/consultas-sql)
+
+🔗 [Agrupa y ordena en SQL](https://achique-luisdan.com/agrupa-y-ordena-en-sql)
 
 ## Paso 5. Visualizar
 
