refactor: Completa artículo de Análisis de Ventas con SQL

--- a/posts/analisis-de-ventas-con-sql.mdx
+++ b/posts/analisis-de-ventas-con-sql.mdx
@@ -189,5 +189,15 @@ Finalmente, utilizaremos la herramienta de pgAdmin 4, para generar un gráfico c
 
 Así facilitaremos la comprensión y la toma de decisiones.
 
-En conclusión, el artículo proporciona una guía práctica sobre cómo utilizar SQL para realizar análisis de datos. El proceso puede aplicarse a una variedad de problemas de negocios.
+## Extra: SQL en Google Sheet
+
+Me di cuenta que podemos usar SQL en Google Sheet.
+De esa forma, puedes agilizar y saltarte los pasos de exportar e importar los datos.
+Allí mismo en la hoja de cálculo los puedes analizar usando SQL.
+Aunque tiene varias limitaciones, porque no todos los comandos SQL funcionan allí.
+
+![Ejemplo de SQL en Google Sheet](https://tizanasoft.com/static/SQL_EN_GOOGLE_SHEET.png)
+
+
+En conclusión, el artículo proporciona una guía práctica sobre cómo utilizar SQL para realizar análisis de datos. El proceso puede aplicarse a una variedad de problemas, necesidades y objetivos de negocios.
 
