Completa primera edición post subrayado

--- a/posts/que-es-y-que-no-es-el-subrayado.mdx
+++ b/posts/que-es-y-que-no-es-el-subrayado.mdx
@@ -6,6 +6,10 @@ description: 'Técnica de estudio que sirve para resaltar las ideas esenciales o
 reading: '15'
 ---
 
+![Lectura maravillosa](https://tizanasoft.com/static/BOOK_Y_TE.png)
+
+
+
 Es una técnica de estudio individual, que se puede ir perfeccionando con la practica.
 
 Se utiliza al mismo tiempo que la lectura comprensiva, durante la segunda o tercera lectura del texto.
@@ -49,7 +53,6 @@ Usando formas geométricas.
 ![04 Usando Formas](https://tizanasoft.com/static/04_USANDO_FORMAS.png)
 
 
-
 ## 3. ¿Cómo realizar un buen subrayado?
 
 ### Paso 1. Leer texto completo una o dos veces.
@@ -70,6 +73,10 @@ Si un párrafo completo parece ser muy importante, puede trazarse una línea ver
 ### Paso 5. Agregar notas marginales.
 
 Combina el subrayado con notas marginales para aclarar, complementar o agregar pensamientos propios o de otros autores.
+
+### Ejemplo:
+
+![Ejemplo de Subrayado Algoritmo Wikipedia](https://tizanasoft.com/static/EJEMPLO_SUBRAYADO_ALGORITMO_WIKI.png)
 
 ## 4. ¿Cuales son las desventajas del subrayado?
 
